[tool.poetry]
name = "irmbook"
version = "0.1.0"
description = ""
authors = ["Belg PC <tomsomoza911@gmail.com>"]
readme = "README.md"
packages = [{include = "irmbook", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pytest = "^8.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
